--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </p>
             <button class="btn btn-rounded-primary">لورم ایپسوم</button>
           </div>
-          <div class="col-md-6 text-start">
+          <div class="col-md-6 text-start p-5">
             <img class="img-fluid" src="./images/intro/1.png" alt="" />
           </div>
         </div>
