--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="navbar navbar-expand-lg menu navbar-dark fixed-top shadow">
         <div class="container">
-          <a class="navbar-brand" href="#">Webprog.io</a>
+          <a class="navbar-brand" href="#">Hasibullah-Wahabzadah</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -53,7 +53,7 @@
             </p>
             <button class="btn btn-rounded-primary">لورم ایپسوم</button>
           </div>
-          <div class="col-md-6 text-start">
+          <div class="col-md-6 text-start pt-5">
             <img class="img-fluid" src="./images/intro/1.png" alt="" />
           </div>
         </div>
@@ -339,7 +339,7 @@
                   <div class="d-flex align-items-center justify-content-start justify-content-md-center">
                       <i class="bi bi-telephone-fill text-secondary fs-1 ms-3"></i>
                       <div>
-                          <span>09179000000</span>
+                          <span>93794454095<br>93728223784</span>
                           <p class="mb-0">شنبه تا پنج شنبه, 8 صبح تا 4 بعد از ظهر</p>
                       </div>
                   </div>
@@ -348,7 +348,7 @@
                   <div class="d-flex align-items-center justify-content-start justify-content-md-center">
                       <i class="bi bi-envelope-fill text-secondary fs-1 ms-3"></i>
                       <div>
-                          <span>info@company.com</span>
+                          <span>hasibullahwahabzadah@gmail.com</span>
                           <p class="mb-0">پشتیبانی آنلاین</p>
                       </div>
                   </div>
@@ -357,8 +357,8 @@
                   <div class="d-flex align-items-center justify-content-start justify-content-md-center">
                       <i class="bi bi-map-fill text-secondary fs-1 ms-3"></i>
                       <div>
-                          <span>لورم ایپسوم</span>
-                          <p class="mb-0">لورم ایپسوم متن ساختگی</p>
+                          <span>ملاسیان</span>
+                          <p class="mb-0">هرات / افغانستان</p>
                       </div>
                   </div>
               </div>
@@ -385,7 +385,7 @@
       <div class="container footer-links py-4 mt-4">
           <div class="row gy-4">
               <div class="col-12 col-lg-5 offset-lg-1">
-                  <h5 class="fw-bold">WebProg.io</h5>
+                  <h5 class="fw-bold">Hasibullah-Wahabzadah</h5>
                   <hr>
                   <p class="lh-lg mb-0">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از
                       طراحان
@@ -425,8 +425,8 @@
           <div class="container py-3">
               <div class="row text-center">
                   <div class="col-12">
-                      <h5 class="fw-bold">WebProg.io</h5>
-                      <p class="mb-0">وب پروگ آکادمی آموزش آنلاین تخصصی برنامه نویسی</p>
+                      <h5 class="fw-bold">Hasibullah-Wahabzadah</h5>
+                      <p class="mb-0">لورم ایپسوم متن ساختگی با تولید نامفهوم از صنعت چاپ</p>
                   </div>
               </div>
           </div>
